# cortex_m4_template

./: LICENSE  README.md
ti_msp432/: CMakeLists.txt  main_blinky.c  main_freertos.c  main_nortos.c
ti_msp432/app/: Board.h  CMakeLists.txt  FreeRTOSConfig.h  MSP_EXP432P401R.c  README.md  display.c  main_freertos.c  splash_image.c  splash_image.h
ti_msp432/board_essentials/: CMakeLists.txt
ti_msp432/bsp/: CMakeLists.txt
ti_msp432/bsp/board/: Board.html  CMakeLists.txt  DeviceFamily.h
ti_msp432/bsp/board/board_essentials/: CMakeLists.txt
ti_msp432/bsp/board/driverlib/: CMakeLists.txt  cpu.c  crc32.c  dma.h  flash_a.c  i2c.h  spi.h  timer32.c  uart.h
ti_msp432/bsp/board/driverlib/include/: i2c.h  interrupt.h  spi.h  uart.h
ti_msp432/bsp/board/driverlib/src/: adc14.c  crc32.c  cs.c  flash.c  flash_a.c  gpio.c  i2c.c  interrupt.c  lcd_f.c  pss.c  rtc_c.c  spi.c  timer32.c  uart.c
ti_msp432/bsp/display/: CMakeLists.txt  Display.c  Display.h  DisplayExt.c  DisplayExt.h  DisplayHost.c  DisplayHost.h  DisplaySharp.c  DisplaySharp.h  DisplayUart.c  DisplayUart.h
ti_msp432/bsp/display/lcd/: SharpGrLib.c  SharpGrLib.h
ti_msp432/bsp/driverlib/: CMakeLists.txt
ti_msp432/bsp/drivers/: ADC.c  ADC.h  ADCBuf.c  ADCBuf.h  Board.h  CMakeLists.txt  Capture.c  Capture.h  GPIO.h  I2C.c  I2C.h  I2CSlave.c  I2CSlave.h  NVS.c  NVS.h  PWM.c  PWM.h  Power.h  SD.c  SD.h  SPI.c  SPI.h  Timer.c  Timer.h  UART.c  UART.h  Watchdog.c  Watchdog.h
ti_msp432/bsp/drivers/adc/: ADCMSP432.c  ADCMSP432.h
ti_msp432/bsp/drivers/adcbuf/: ADCBufMSP432.c  ADCBufMSP432.h
ti_msp432/bsp/drivers/capture/: CaptureMSP432.c  CaptureMSP432.h
ti_msp432/bsp/drivers/dma/: UDMAMSP432.c  UDMAMSP432.h
ti_msp432/bsp/drivers/gpio/: GPIOMSP432.c  GPIOMSP432.h
ti_msp432/bsp/drivers/i2c/: I2CMSP432.c  I2CMSP432.h
ti_msp432/bsp/drivers/i2cslave/: I2CSlaveMSP432.c  I2CSlaveMSP432.h
ti_msp432/bsp/drivers/nvs/: NVSMSP432.c  NVSRAM.c  NVSRAM.h  NVSSPI25X.c  NVSSPI25X.h
ti_msp432/bsp/drivers/power/: PowerMSP432.c  PowerMSP432.h
ti_msp432/bsp/drivers/pwm/: PWMTimerMSP432.c  PWMTimerMSP432.h
ti_msp432/bsp/drivers/sd/: SDSPI.c  SDSPI.h
ti_msp432/bsp/drivers/spi/: SPIMSP432DMA.c  SPIMSP432DMA.h
ti_msp432/bsp/drivers/timer/: TimerMSP432.c  TimerMSP432.h
ti_msp432/bsp/drivers/uart/: UARTMSP432.c  UARTMSP432.h
ti_msp432/bsp/drivers/utils/: List.c  Random.c  RingBuf.c
ti_msp432/bsp/drivers/watchdog/: WatchdogMSP432.c  WatchdogMSP432.h
ti_msp432/bsp/grlib/: CMakeLists.txt  button.c  checkbox.c  circle.c  context.c  display.c  image.c  imageButton.c  line.c  radioButton.c  rectangle.c  string.c
ti_msp432/bsp/grlib/fonts/: fontcm12.c  fontcm12b.c  fontcm12i.c  fontcm14.c  fontcm14b.c  fontcm14i.c  fontcm16.c  fontcm16b.c  fontcm16i.c  fontcm18.c  fontcm18b.c  fontcm18i.c  fontcm20.c  fontcm20b.c  fontcm20i.c  fontcm22.c  fontcm22b.c  fontcm22i.c  fontcm24.c  fontcm24b.c  fontcm24i.c  fontcm26.c  fontcm26b.c  fontcm26i.c  fontcm28.c  fontcm28b.c  fontcm28i.c  fontcm30.c  fontcm30b.c  fontcm30i.c  fontcm32.c  fontcm32b.c  fontcm32i.c  fontcm34.c  fontcm34b.c  fontcm34i.c  fontcm36.c  fontcm36b.c  fontcm36i.c  fontcm38.c  (+113 more)
ti_msp432/bsp/third_party_libs/: CMakeLists.txt
ti_msp432/bsp/third_party_libs/fatfs/: CMakeLists.txt  TI_README.md  ffcio.c  ffsystem.c
ti_msp432/bsp/third_party_libs/spiffs/: CMakeLists.txt  SPIFFSNVS.c  SPIFFSNVS.h
ti_msp432/kernel/: CMakeLists.txt
ti_msp432/kernel/freertos/: CMakeLists.txt
ti_msp432/kernel/freertos/dpl/: ClockP_freertos.c  HwiPMSP432_freertos.c  MutexP_freertos.c  PowerMSP432_freertos.c  SemaphoreP_freertos.c  SystemP_freertos.c
ti_msp432/kernel/freertos/startup/: startup_msp432_gcc.c
ti_msp432/kernel/nortos/: CMakeLists.txt  NoRTOS.c
ti_msp432/kernel/nortos/dpl/: ClockPTimer_nortos.c  HwiPMSP432_nortos.c  MutexP_nortos.c  PowerMSP432_nortos.c  QueueP_nortos.c  SemaphoreP_nortos.c  SwiP_nortos.c  SystemP_nortos.c  TimerPMSP432_nortos.c  posix_sleep.c
ti_msp432/kernel/nortos/startup/: startup_msp432_gcc.c
